Bug 140051 - Style Inspector values like "bold", "italic" are not localisable.
Summary: Style Inspector values like "bold", "italic" are not localisable.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Style-Inspector
  Show dependency treegraph
 
Reported: 2021-02-01 08:23 UTC by Shivam Kumar Singh
Modified: 2021-03-07 08:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Shivam Kumar Singh 2021-02-01 08:23:23 UTC
Description:
The values displayed(in the right side) of SI are not localisable. Following tdf#139136, "true" and "false" are now localisable but other values like "normal", "bold"... etc still remain in english. Proper patch should be added for that.

Tested in 
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: fddad2ed797f1773ed5be979a0b05d3f976b744e
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded

Steps to Reproduce:
1. Go to Styles Inspector in LO Writer
2. Write a sample word and bold it.
3. In the SI you can find values like "bold", these values should be localisable.

Actual Results:
 

Expected Results:
 


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Jean-Baptiste Faure 2021-02-04 21:09:36 UTC
Confirmed in
Version: 7.1.1.0.0+ / LibreOffice Community
Build ID: b7a5f5ed9fcfce61eccf116a6cccb2ceb9a75d75
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Ubuntu_18.04_x86-64
Calc: threaded

and 

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: a18aaa0f071832bec72346b573dcb9aace7d3af1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Ubuntu_18.04_x86-64
Calc: threaded


I do not see "bold" (it seems that bold is only a numerical value for the character weight) but I see "italic". Same problem for Style suite, the name shown is not the localized style name. For example for me "body text" instead of "corps de texte" in French.

Best regards. JBF
Comment 2 Commit Notification 2021-03-07 08:35:08 UTC
shivam-51 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8dfad592b4ab0497c140a921b8f56977a383f1d1

tdf#140051 SI property values like "Bold" are now localisable

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.