tdf#140051 SI property values like "Bold" are now localisable

This patch now allows "Bold", "Italic" and "Normal" to
be localisable.

Change-Id: Icd8102ce84db9a3c68ab69f5f9eadf0cf04755b0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110475
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins